adjusted icon sizes and bottom margins

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
+    padding: 5px;
 }
 .main-container h3 {
     margin-top: 40px;
@@ -41,7 +41,7 @@ body {
 }
 
 img {
-    height: 40px;
+    height: 35px;
 }
 
 div > div {
@@ -72,7 +72,7 @@ div p {
 }
 
 .social-buttons a img:hover {
-    height: 35px;
+    height: 40px;
 }
 
 .image {
@@ -92,6 +92,7 @@ div p {
     align-items: center;
     border-bottom-right-radius: 15px;
     border-top-left-radius: 15px;
+    margin-bottom: 15px;
 }
 
 .mediumArticles:hover {
@@ -149,9 +150,3 @@ div p {
 footer {
     text-align: center;
 }
-
-
-
-
-
-
