--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 5px;
+    padding-top: 50px;
 }
 .main-container h3 {
     margin-top: 40px;
@@ -36,8 +37,8 @@ body {
 
 .picture {
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
 }
 
 img {
