added hover styles for mobile

--- a/style.css
+++ b/style.css
@@ -151,3 +151,15 @@ div p {
 footer {
     text-align: center;
 }
+
+
+/*Hover Styles For Mobile*/
+
+.atupaStaticLandingPageHover {
+    background-color: #005f73;
+    border-radius: 9px;
+    transition: .5s;
+    padding-block: 2px;
+    border-bottom-right-radius: 15px;
+    border-top-left-radius: 15px;
+}
