--- a/style.css
+++ b/style.css
@@ -34,10 +34,28 @@ section {
     padding-bottom: 10px;
 }
 
+.fancyLink {
+    text-decoration: none;
+    color: #0e0e0e;
+    background-image: linear-gradient(90deg, #005f73, #ee9b00);
+    background-size: 0% 2px;
+    background-repeat: no-repeat;
+    background-position: left bottom;
+    transition: 1s ease;
+}
+
+.fancyLink:hover {
+    background-size: 100% 3px;
+}
+
 @media screen and (min-width: 800px) {
     .main-container {
         max-width: 700px;
         margin: auto;
+    }
+
+    p {
+        font-size: 32px;
     }
     
 }
