made more edits

--- a/style.css
+++ b/style.css
@@ -53,6 +53,10 @@ body {
     margin-bottom: 20px;
 }
 
+.first-line {
+    margin-top: 50px;
+}
+
 section {
     padding-inline: 40px;
     text-align: center;
